HTML structure and CSS initial styles

--- a/quiz.html
+++ b/quiz.html
@@ -9,17 +9,31 @@
     />
     <meta name="description" content="Web App Film Quiz" />
     <meta name="keywords" content="film, quiz, answer, questions" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Film Quiz Game</title>
   </head>
   <body>
+    <header>
+      <h1>Film Quiz</h1>
+    </header>
     <main>
-      <p>Pregunta</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
+      <button id="btnBack"><a href="./index.html">Back!</a></button>
+      <section id="card">
+        <h2 id="question">aqui va la pregunta</h2>
+
+        <!-- <p id="count">contador</p> -->
+
+        <ul>
+          <li><button id="ans1" class="btns">resp 1</button></li>
+          <li><button id="ans2" class="btns">resp 2</button></li>
+          <li><button id="ans3" class="btns">resp 3</button></li>
+          <li><button id="ans4" class="btns">resp 4</button></li>
+        </ul>
+      </section>
     </main>
+    <footer>
+      "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
+    </footer>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
