--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
     />
     <meta name="description" content="Web App Film Quiz" />
     <meta name="keywords" content="film, quiz, answer, questions" />
+    <link rel="stylesheet" href="./CSS/styles.css">
     <title>Film Quiz</title>
   </head>
   <body>
-    <main>
-      <h1>Are you ready to test your film knowledge?</h1>
-      <button>GO!</button>
+    <header>
+      <h1>Film Quiz</h1>
+    </header>
+    <main id="index">
+      <section id="title">
+        <h2>Are you ready to test your film knowledge?</h2>
+        <button id="btnGo"><a href="./quiz.html">Go!</a></button>
+      </section>
     </main>
+    <footer>
+      "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
+    </footer>
+
+    <script src="./JS/script.js"></script>
   </body>
 </html>
