styles flex,grid and responsive

--- a/quiz.html
+++ b/quiz.html
@@ -18,15 +18,23 @@
     </header>
     <main>
       <button id="btnBack"><a href="./index.html">Back!</a></button>
+      <section id="question">
+        <h2>
+          For the film "Raiders of The Lost Ark", what was Harrison Ford sick
+          with during the filming of the Cairo chase?
+        </h2>
+      </section>
+
+      <!-- <p id="count">contador</p> -->
       <section id="card">
-        <h2 id="question">aqui va la pregunta</h2>
-
-        <!-- <p id="count">contador</p> -->
-
         <ul>
           <li><button id="ans1" class="btns">resp 1</button></li>
           <li><button id="ans2" class="btns">resp 2</button></li>
-          <li><button id="ans3" class="btns">resp 3</button></li>
+          <li>
+            <button id="ans3" class="btns">
+              The Treasure of the Sierra Madre
+            </button>
+          </li>
           <li><button id="ans4" class="btns">resp 4</button></li>
         </ul>
       </section>
