--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="Web App Film Quiz" />
     <meta name="keywords" content="film, quiz, answer, questions" />
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Film Quiz</title>
   </head>
   <body>
