Asociamos texto HTML con pregunta y respuestas

--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
     <main>
       <button id="btnBack"><a href="./index.html">Back!</a></button>
       <section id="question">
-        <h2>
+        <h2 id="questionContent">
           For the film "Raiders of The Lost Ark", what was Harrison Ford sick
           with during the filming of the Cairo chase?
         </h2>
