enable/disable functions and randon answers event

--- a/quiz.html
+++ b/quiz.html
@@ -37,6 +37,7 @@
           </li>
           <li><button id="ans4" class="btns">resp 4</button></li>
         </ul>
+        <button id="botonPruebaNext">NEXT</button>
       </section>
     </main>
     <footer>
