tansition correct/incorrect cards

--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
           For the film "Raiders of The Lost Ark", what was Harrison Ford sick
           with during the filming of the Cairo chase?
         </h2>
+        <p id="solution"></p>
       </section>
 
       <!-- <p id="count">contador</p> -->
@@ -31,9 +32,7 @@
           <li><button id="ans1" class="btns">resp 1</button></li>
           <li><button id="ans2" class="btns">resp 2</button></li>
           <li>
-            <button id="ans3" class="btns">
-              The Treasure of the Sierra Madre
-            </button>
+            <button id="ans3" class="btns">resp 3</button>
           </li>
           <li><button id="ans4" class="btns">resp 4</button></li>
         </ul>
