resolve popup structure

--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
           For the film "Raiders of The Lost Ark", what was Harrison Ford sick
           with during the filming of the Cairo chase?
         </h2>
-        <p id="solution"></p>
+        <div id="contSolution"><p id="solution"></p></div>
       </section>
 
       <!-- <p id="count">contador</p> -->
