setTimeout Color Orange

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
     </footer>
 
-    <script src="./JS/script.js"></script>
+    <script src="JS/script.js"></script>
   </body>
 </html>
