index finalscores(text error pending)

--- a/quiz.html
+++ b/quiz.html
@@ -23,10 +23,12 @@
           For the film "Raiders of The Lost Ark", what was Harrison Ford sick
           with during the filming of the Cairo chase?
         </h2>
-        <div id="contSolution"><p id="solution"></p></div>
+        <div id="contSolution">
+          <p id="solution"></p>
+          <p id="scores"></p>
+        </div>
       </section>
 
-      <!-- <p id="count">contador</p> -->
       <section id="card">
         <ul>
           <li><button id="ans1" class="btns">resp 1</button></li>
