--- a/quiz.html
+++ b/quiz.html
@@ -44,6 +44,10 @@
     <footer>
       "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
     </footer>
+    <audio
+      id="audioQuest"
+      src="./audio/quien-quiere-ser-millonario.mp3"
+    ></audio>
     <script src="./JS/script.js"></script>
   </body>
 </html>
