--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
     <main id="index">
       <section id="title">
         <h2>Are you ready to test your film knowledge?</h2>
-        <button id="btnGo"><a href="./quiz.html">Go!</a></button>
+        <button id="btnGo">
+          GO!
+          <!-- <a href="./quiz.html">Go!</a> -->
+        </button>
       </section>
     </main>
     <footer>
       "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
     </footer>
+    <!-- <audio class="mainAudio" src="./audio/millionaireMusic.mp3"></audio> -->
 
     <script src="./JS/script.js"></script>
   </body>
