little modification  styles.css (index.html) and green flicker correct answer when fail question

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Film Quiz</title>
   </head>
-  <body>
+  <body id="index0">
     <header>
       <h1>Film Quiz</h1>
     </header>
     <main id="index">
       <section id="title">
-        <h2>Are you ready to test your film knowledge?</h2>
+        <h2 id="textStart">Are you ready to test your film knowledge?</h2>
         <button id="btnGo">
           GO!
           <!-- <a href="./quiz.html">Go!</a> -->
