--- a/quiz.html
+++ b/quiz.html
@@ -48,6 +48,7 @@
       id="audioQuest"
       src="./audio/quien-quiere-ser-millonario.mp3"
     ></audio>
+    <audio id="audioCount" src="./audio/countDown.mp3"></audio>
     <audio loop id="mainAudio" src="./audio/millionaireMusic.mp3"></audio>
     <script src="./JS/script.js"></script>
   </body>
