index.html and quiz-html styles, background and text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </header>
     <main id="index">
       <section id="title">
-        <h2 id="textStart">Are you ready to test your film knowledge?</h2>
+        <h2 id="textStart">
+          ARE YOU READY TO TEST<br />
+          YOUR FILM KNOWLEDGE?
+        </h2>
         <button id="btnGo">
           GO!
           <!-- <a href="./quiz.html">Go!</a> -->
@@ -26,10 +29,8 @@
       </section>
     </main>
     <footer>
-      "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
+      © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
     </footer>
-    <!-- <audio class="mainAudio" src="./audio/millionaireMusic.mp3"></audio> -->
-
     <script src="./JS/script.js"></script>
   </body>
 </html>
