--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Film Quiz Game</title>
   </head>
-  <body>
+  <body id="index1">
     <header>
       <h1>Film Quiz</h1>
     </header>
@@ -42,7 +42,7 @@
       </section>
     </main>
     <footer>
-      "Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo"
+      © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
     </footer>
     <audio
       id="audioQuest"
