--- a/quiz.html
+++ b/quiz.html
@@ -40,6 +40,7 @@
         </ul>
         <button id="botonPruebaNext">NEXT</button>
       </section>
+      <button id="mute"><img src="" alt="" /></button>
     </main>
     <footer>
       © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
