--- a/finalScores.html
+++ b/finalScores.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Puntuacion</h1>
+    <p id="finalScore"></p>
     <script src="./JS/script.js"></script>
-</body>
+  </body>
 </html>
