changes after Samu´s class

--- a/quiz.html
+++ b/quiz.html
@@ -40,7 +40,9 @@
         </ul>
         <button id="botonPruebaNext">NEXT</button>
       </section>
-      <button id="mute"><img src="" alt="" /></button>
+      <!-- <button id="mute"> -->
+      <img id="mute" src="./img/mute.png" alt="" />
+      <!-- </button> -->
     </main>
     <footer>
       © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
