--- a/quiz.html
+++ b/quiz.html
@@ -31,12 +31,10 @@
 
       <section id="card">
         <ul>
-          <li><button id="ans1" class="btns">resp 1</button></li>
-          <li><button id="ans2" class="btns">resp 2</button></li>
-          <li>
-            <button id="ans3" class="btns">resp 3</button>
-          </li>
-          <li><button id="ans4" class="btns">resp 4</button></li>
+          <li id="ans1" class="btns">resp 1</li>
+          <li id="ans2" class="btns">resp 2</li>
+          <li id="ans3" class="btns">resp 3</li>
+          <li id="ans4" class="btns">resp 4</li>
         </ul>
         <button id="botonPruebaNext">NEXT</button>
       </section>
