try/catch, favicon and some script

--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Web App Film Quiz" />
     <meta name="keywords" content="film, quiz, answer, questions" />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="icon" type="image/jpg" href="./img/favicon.png" />
     <title>Film Quiz Game</title>
   </head>
   <body id="index1">
@@ -41,9 +42,6 @@
           <button id="ans4" class="btns">resp 4</button>
         </ul>
       </section>
-      <!-- <button id="mute"> -->
-
-      <!-- </button> -->
     </main>
     <footer>
       © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
