--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Web App Film Quiz" />
     <meta name="keywords" content="film, quiz, answer, questions" />
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="icon" type="image/jpg" href="./img/favicon.png" />
     <title>Film Quiz</title>
   </head>
   <body id="index0">
@@ -22,27 +23,22 @@
           ARE YOU READY TO TEST<br />
           YOUR FILM KNOWLEDGE?
         </h2>
-        <button id="btnGo">
-          GO!
-          <!-- <a href="./quiz.html">Go!</a> -->
-        </button>
+        <button id="btnGo">GO!</button>
       </section>
     </main>
-  
+
     <footer>
       © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
     </footer>
-    <!-- <script src="./JS/script.js"></script> -->
+
     <script>
-      const go= document.getElementById("btnGo");
+      const go = document.getElementById("btnGo");
 
-      // Boton go para acceder a la pagina de juego.    
-    
+      // Boton go para acceder a la pagina de juego.
+
       go.addEventListener("click", () => {
-          window.location.assign("./quiz.html");
-          });
-
-
-</script>
+        window.location.assign("./quiz.html");
+      });
+    </script>
   </body>
 </html>
