--- a/quiz.html
+++ b/quiz.html
@@ -46,10 +46,8 @@
     <footer>
       © Angel Ares, David Barreira, Luis Díaz, Naima El Gargari y Patricia Lojo
     </footer>
-    <audio
-      id="audioQuest"
-      src="./audio/quien-quiere-ser-millonario.mp3"
-    ></audio>
+    <audio id="audioQuestIncorrect" src="./audio/incorrectQuestion.mp3"></audio>
+    <audio id="audioQuest" src="./audio/correctQuestion.mp3"></audio>
     <audio id="audioCount" src="./audio/countDown.mp3"></audio>
     <audio loop id="mainAudio" src="./audio/millionaireMusic.mp3"></audio>
     <script src="./JS/script.js"></script>
