--- a/quiz.html
+++ b/quiz.html
@@ -20,13 +20,13 @@
     <main>
       <div id="buttons">
         <button id="btnBack"><a href="./index.html">BACK</a></button>
-        <h4 id="counter"></h4>  
-          <img id="mute" src="./img/mute.png" alt="" /> 
+        <h4 id="counter"></h4>
+        <img id="mute" src="./img/mute.png" alt="" />
       </div>
-      <div id="mute_50">
-        <button id="cincuenta">50%</button>
+      <div id="cont_50">
+        <button id="btn_50">50%</button>
       </div>
-      
+
       <section id="question">
         <h2 id="questionContent">
           For the film "Raiders of The Lost Ark", what was Harrison Ford sick
