Question index number and final

--- a/quiz.html
+++ b/quiz.html
@@ -24,6 +24,7 @@
         <img id="mute" src="./img/mute.png" alt="" />
       </div>
       <div id="cont_50">
+        <p id="questionNumber"></p>
         <button id="btn_50">50%</button>
       </div>
 
