corrections post-proyect

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <h1>Film Quiz</h1>
     </header>
     <main id="index">
-      <section id="title">
+      <!-- <section id="title"> -->
         <h2 id="textStart">
           ARE YOU READY TO TEST<br />
           YOUR FILM KNOWLEDGE?
         </h2>
         <button id="btnGo">GO!</button>
-      </section>
+      <!-- </section> -->
     </main>
 
     <footer>
